# template-streamlit-uv

./: .gitignore  CHANGELOG.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
