[project]
name = "template-streamlit-uv"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pydantic", "streamlit"]


[dependency-groups]
dev = ["template-streamlit-uv", "pytest>=8.4.1"]


[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ['src']
include = ['template-streamlit-uv*']

[tool.uv.workspace]
members = ["template-streamlit-uv"]

[tool.setuptools.package-data]
"*" = ["data/*", "data/**/*"]

[tool.uv.sources]
template-streamlit-uv = { workspace = true }


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/template-streamlit-uv/__init__.py:__version__"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install uv && uv build"
tag_format = "v{version}"
major_on_zero = false
allow_zero_version = true
upload_to_vcs_release = true


[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"


[tool.pylint.messages_control]
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "R0903", # too-few-public-methods
    "R0913", # too-many-arguments
    "R0914", # too-many-locals
    "W1203", # logging-format-interpolation
    "W0718", # exception-escape
    "W0511", # TODOs
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = [
    "i",
    "j",
    "k",
    "ex",
    "Run",
    "_",
    "x",
    "y",
    "z",
    "id",
    "db",
    "pk",
    "ok",
]

[tool.pylint.design]
max-args = 8
max-locals = 20
max-returns = 6
max-branches = 12

[tool.pyright]
include = ["src", "tests"]
exclude = [
    "docker_data",
    "doc",
    "**/node_modules",
    "**/cdk.out",
    "**/.pytest_cache",
    "**/build",
    "**/dist",
    "**/.vscode",
    "**/__pycache__",
    "**/*.egg-info",
    "**/*.ruff_cache",

]
reportMissingImports = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
skip-magic-trailing-comma = false


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["template-streamlit-uv"]
